Created Sign Up Page and Sign Up Functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,7 @@
         android:layout_marginTop="16dp"
         android:text="Battle!"
         android:textSize="36sp"
-        android:id="@+id/battleButton" />
+        android:id="@+id/battleButton"
+        android:backgroundTint="@color/cardview_dark_background"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
