--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,19 +5,19 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".SignUpActivity">
 
     <TextView
-    android:layout_width="match_parent"
-    android:layout_height="150dip"
-    android:id="@+id/titleLoginTextView"
-    android:textSize="42sp"
-    android:text="@string/welcome_to_monster_arena"
-    android:gravity="center"
-    android:layout_margin="16dip"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="100dip"
+        android:id="@+id/titleLoginTextView"
+        android:textSize="42sp"
+        android:text="@string/create_account"
+        android:gravity="center"
+        android:layout_margin="16dip"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:layout_width="300dp"
@@ -28,7 +28,7 @@
         android:layout_marginBottom="24dip"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/userNameLoginEditText"
+        android:id="@+id/userNameCreationEditText"
         android:autofillHints="Please enter username"
         android:inputType="text"
         android:gravity="center"
@@ -36,14 +36,30 @@
 
     <EditText
         android:layout_width="300dp"
-        android:layout_height="75dp"
+        android:layout_height="85dp"
         android:hint="@string/password"
-        app:layout_constraintTop_toBottomOf="@+id/userNameLoginEditText"
+        app:layout_constraintTop_toBottomOf="@+id/userNameCreationEditText"
         android:layout_margin="16dp"
+        android:layout_marginBottom="24dip"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/passwordLoginEditText"
-        android:autofillHints="Please enter password"
+        android:id="@+id/passwordCreationEditText"
+        android:autofillHints="Please enter username"
+        android:inputType="textPassword"
+        android:gravity="center"
+        android:textSize="24sp"/>
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="85dp"
+        android:hint="@string/confirm_password"
+        app:layout_constraintTop_toBottomOf="@+id/passwordCreationEditText"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="24dip"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/confirmPasswordCreationEditText"
+        android:autofillHints="Please enter username"
         android:inputType="textPassword"
         android:gravity="center"
         android:textSize="24sp"/>
@@ -51,9 +67,9 @@
     <Button
         android:layout_width="300dp"
         android:layout_height="105dp"
-        app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText"
-        android:id="@+id/loginButton"
-        android:text="@string/login"
+        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordCreationEditText"
+        android:id="@+id/signupCreationButton"
+        android:text="@string/sign_up"
         android:textSize="32sp"
         android:layout_margin="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,9 +78,9 @@
     <Button
         android:layout_width="300dp"
         android:layout_height="105dp"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton"
-        android:id="@+id/signupButton"
-        android:text="@string/sign_up"
+        app:layout_constraintTop_toBottomOf="@+id/signupCreationButton"
+        android:id="@+id/signupCancelButton"
+        android:text="@string/cancel"
         android:textSize="32sp"
         android:layout_margin="16dp"
         app:layout_constraintEnd_toEndOf="parent"
