--- a/app/src/main/res/layout/activity_monsters.xml
+++ b/app/src/main/res/layout/activity_monsters.xml
@@ -9,11 +9,11 @@
     tools:context=".MonstersActivity">
 
     <TextView
+        android:id="@+id/monsterRosterTitle"
         android:layout_width="204dp"
         android:layout_height="50dp"
-        android:id="@+id/monsterRosterTitle"
-        android:text="@string/monster_roster_title"
         android:gravity="center"
+        android:text="@string/monster_roster_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -22,17 +22,17 @@
         app:layout_constraintVertical_bias="0.01" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/monsterListViewTable"
         android:layout_width="350dp"
         android:layout_height="672dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="58dp"
-        app:layout_constraintTop_toBottomOf="@+id/monsterRosterTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="25dp"
         android:layout_marginLeft="25dp"
+        android:layout_marginTop="25dp"
         android:layout_marginRight="25dp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/monsterRosterTitle"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="58dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
