--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0006</color>
+    <color name="blue">#00ABFF</color>
+    <color name="green">#00FF00</color>
+    <color name="grey">#808080</color>
 </resources>
