--- a/app/src/main/res/layout/activity_battle_details.xml
+++ b/app/src/main/res/layout/activity_battle_details.xml
@@ -23,6 +23,7 @@
         android:layout_width="300dp"
         android:layout_height="400dp"
         android:layout_marginTop="30dp"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/battleResultsTitle" />
