--- a/app/src/main/res/layout/activity_battle_results.xml
+++ b/app/src/main/res/layout/activity_battle_results.xml
@@ -24,6 +24,7 @@
         android:layout_height="300dp"
         android:layout_marginTop="25dp"
         android:text="You WON OVERRIDE"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/BattleResultsTitle" />
