--- a/app/src/main/res/layout/activity_arena_selection.xml
+++ b/app/src/main/res/layout/activity_arena_selection.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ArenaActivity">
+    tools:context=".ArenaSelectionActivity">
 
     <TextView
         android:id="@+id/arenaSelectionTextView"
