--- a/app/src/main/res/layout/recycler_monster_view.xml
+++ b/app/src/main/res/layout/recycler_monster_view.xml
@@ -5,19 +5,20 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewMonsterRoster"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="5dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="5dp"
         app:cardBackgroundColor="@color/grey"
         app:cardCornerRadius="20dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -58,7 +59,18 @@
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                 app:layout_constraintVertical_bias="0.204" />
+            <TextView
+                android:layout_width="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/textViewMonsterInfo"
+                android:layout_height="20dp"
+                android:text="click monster to select it for battle"
+                android:gravity="center"
+                android:textSize="14sp"
+                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
