--- a/app/src/main/res/layout/activity_monsters.xml
+++ b/app/src/main/res/layout/activity_monsters.xml
@@ -24,7 +24,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/monsterListViewTable"
         android:layout_width="350dp"
-        android:layout_height="672dp"
+        android:layout_height="500dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
         android:layout_marginRight="25dp"
@@ -33,5 +33,16 @@
         app:layout_constraintTop_toBottomOf="@+id/monsterRosterTitle"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="58dp" />
+
+    <Button
+        android:id="@+id/createNewMonsterButton"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text="Create Monster"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/monsterListViewTable"
+        app:layout_editor_absoluteY="500dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
